//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  username String [unique, not null]
  name String [not null]
  password String [not null]
  bio String [not null, default: 'Hello, check out my stories!']
  avatarType String [not null, default: 'croodles']
  avatarSeed String [not null, default: 'scrivono']
  books Book [not null]
  chapters Chapter [not null]
  following Follow [not null]
  followers Follow [not null]
  comments Comment [not null]
  bookReactions BookReaction [not null]
  chapterReactions ChapterReaction [not null]
  ReadLater ReadLater [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table Book {
  id Int [pk, increment]
  author User [not null]
  authorId Int [not null]
  description String [not null]
  title String [not null]
  chapters Chapter [not null]
  comments Comment [not null]
  reactions BookReaction [not null]
  likes Int [not null, default: 0]
  dislikes Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Chapter {
  id Int [pk, increment]
  title String [not null]
  text String [not null]
  description String [not null, default: '']
  status String [not null, default: 'published']
  chapterNumber Int [not null, default: -1]
  book Book
  bookId Int
  author User [not null]
  authorId Int [not null]
  tags TagsOnChapters [not null]
  comments Comment [not null]
  reactions ChapterReaction [not null]
  ReadLater ReadLater [not null]
  likes Int [not null, default: 0]
  dislikes Int [not null, default: 0]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Tag {
  id Int [pk, increment]
  label String [not null]
  value String [unique, not null]
  chapters TagsOnChapters [not null]
}

Table TagsOnChapters {
  chapter Chapter [not null]
  chapterId Int [not null]
  tag Tag [not null]
  tagId Int [not null]

  indexes {
    (chapterId, tagId) [pk]
  }
}

Table Follow {
  leader User [not null]
  leaderId Int [not null]
  follow User [not null]
  followId Int [not null]

  indexes {
    (leaderId, followId) [pk]
  }
}

Table Comment {
  id Int [pk, increment]
  text String [not null]
  author User [not null]
  authorId Int [not null]
  book Book
  bookId Int
  chapter Chapter
  chapterId Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table BookReaction {
  author User [not null]
  authorId Int [not null]
  value Int [not null]
  book Book [not null]
  bookId Int [not null]

  indexes {
    (authorId, bookId) [pk]
  }
}

Table ChapterReaction {
  author User [not null]
  authorId Int [not null]
  value Int [not null]
  chapter Chapter [not null]
  chapterId Int [not null]

  indexes {
    (authorId, chapterId) [pk]
  }
}

Table ReadLater {
  author User [not null]
  authorId Int [not null]
  chapter Chapter [not null]
  chapterId Int [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (authorId, chapterId) [pk]
  }
}

Ref: Book.authorId > User.id

Ref: Chapter.bookId > Book.id

Ref: Chapter.authorId > User.id

Ref: TagsOnChapters.chapterId > Chapter.id

Ref: TagsOnChapters.tagId > Tag.id

Ref: Follow.leaderId > User.id

Ref: Follow.followId > User.id

Ref: Comment.authorId > User.id

Ref: Comment.bookId > Book.id

Ref: Comment.chapterId > Chapter.id

Ref: BookReaction.authorId > User.id

Ref: BookReaction.bookId > Book.id

Ref: ChapterReaction.authorId > User.id

Ref: ChapterReaction.chapterId > Chapter.id

Ref: ReadLater.authorId > User.id

Ref: ReadLater.chapterId > Chapter.id